Debug tracing: You are now permitted to delete the debug trace policy if no service currently has tracing enabled.  Deleting the trace policy will also delete the trace.policy.guid cluster property.  Improved the error reporting for when you are unable to delete the trace policy because it is in use: the SSM no longer uses the same error message for this situation as it does for attempting to delete the audit sink policy when auditing to a sink policy is enabled.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26057 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -241,6 +241,7 @@ ldapReadTimeout.description =  LDAP read timeout.  A value less than or equal to
 ldapReadTimeout.default = 30s
 ldapReadTimeout.clusterProperty = ldap.read.timeout
 
+# serverconfig name must be same as cluster property name for this property
 trace.policy.guid.description = GUID of internal policy to invoke after each assertion finished, when debug tracing is enabled for a published service (default=empty)
 trace.policy.guid.default =
 trace.policy.guid.clusterProperty = trace.policy.guid
