--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/LogonDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/LogonDialog.properties
@@ -28,7 +28,7 @@ serverField.mnemonic=G
 serverField.tooltip=Enter the gateway location in host[:port] format. (acme.com:443 or just acme.com)
 
 loginButton.label=OK
-loginButton.tooltip=Attemps to log in, using the user name and password entered
+loginButton.tooltip=Attempts to log in, using the user name and password entered
 
 cancelButton.label=Cancel
 
@@ -50,7 +50,7 @@ logon.ssg.untrustedCert.question=Trust server certificate?
 logon.version.mismatch=The SecureSpan Manager version does not match with the SecureSpan Gateway version!\nContact your system administrator for the correct version.\nCurrent Manager version is {0}
 logon.version.mismatch2=The SecureSpan Manager version does not match with the SecureSpan Gateway version!\n(protocol version mismatch - {0} on server and {1} on client)\nContact your system administrator for the correct version.\nCurrent Manager version is {2}
 logon.version.mismatch3=The SecureSpan Manager version does not match with the SecureSpan Gateway version!\n(product version mismatch - {0} on server and {1} on client)\nContact your system administrator for the correct version.\nCurrent Manager version is {2}
-logon.hostname.mismatch=<html><center>The hostname entered for the Gateway is <b>{0}</b><br> But the Gateway presented a certificate claiming its hostname is <b>{1}</b>.<br> \
+logon.hostname.mismatch=<html><center>The hostname entered for the Gateway is <b>{0}</b><br> but the Gateway presented a certificate claiming its hostname is <b>{1}</b>.<br> \
                         Do you want to login to this Gateway?</center></html>.
 logon.invalid.service.url=Please ensure the gateway location is specified in host[:port] format. (acme.com:443 or just acme.com)
 
