Added a "Compile to .AAR File" button to the ScriptAssertion properties dialog.  This prompts the user for an assertion name and then bakes the current script into an .aar file that can be saved locally and then installed on Gateway to which the user has file system access.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26110 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/ScriptAssertion/ivy.xml
+++ b/modules/gateway/assertions/ScriptAssertion/ivy.xml
@@ -25,6 +25,7 @@
     <dependencies>
         <dependency org="bsf" name="bsf" rev="2.4.0-l7p1" force="true" conf="core"/>
         <dependency org="rhino" name="js" rev="1.6R7" force="true" conf="core"/>
+        <dependency org="org.springframework" name="aspectjweaver" rev="2.5.4" force="true" conf="core"/>
         <dependency name="layer7-modular-assertions" rev="latest.integration" force="true"
                     conf="compile->compile;runtime->runtime;test->test"/>
     </dependencies>
