SSG-3973: Implemented GUI validation of target message variable name in all MessageTargetable assertions that use the right-click Select Target Message action as well as the following places that incorporate the target message panel directly:  Regex properties, Require WSS Timestamp properties, Schema validation properties, XSL Transform properties, NCES decorator and validator properties, and the SAMLP assertion target message wizard.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26116 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SchemaValidationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SchemaValidationPropertiesDialog.properties
@@ -22,6 +22,8 @@ error.urlnocontent=No content could be retrieved at that URL
 error.noxmlaturl=Cannot parse the XML from that URL
 error.urlnoschema=The document at URL is not a schema
 error.invalid.targetnamespace=Cannot find a targetNamespace same as a namespace {0}
+error.invalid.targetmessage=Invalid target message: {0}
+error.invalid.targetmessage.title=Invalid Target Message
 warning.inferredTarget.message=\
   This Schema Validation assertion was created in an older version of the SecureSpan Manager\n\
   that did not support target message selection.\n\n\
