SSG-3931: The default session duration for a WS-SecureConversation session is now configurable as a cluster property (wss.secureConversation.defaultSessionDuration). Secure conversation sessions are now immutable and the SecureConversationContextManager is no longer a singleton.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26120 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1160,6 +1160,10 @@ pkix.keyUsage.default=ENFORCE
 pkix.keyUsage.systemProperty=com.l7tech.pkix.keyUsage
 pkix.keyUsage.clusterProperty=pkix.keyUsage
 
+wss.secureConversation.defaultSessionDuration.description=The default duration for WS-SecureConversation sessions (timeunit)
+wss.secureConversation.defaultSessionDuration.default=2h
+wss.secureConversation.defaultSessionDuration.clusterProperty=wss.secureConversation.defaultSessionDuration
+
 wss.decorator.mustUnderstand.description=Whether Security headers should be generated with mustUnderstand asserted (true/false; default true)
 wss.decorator.mustUnderstand.default=true
 wss.decorator.mustUnderstand.systemProperty=com.l7tech.common.security.xml.decorator.secHdrMustUnderstand
