SSM-2660: Fix incorrect SSM client cert error message when not challenged
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26126 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/LogonDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/LogonDialog.properties
@@ -42,6 +42,7 @@ logon.connect.error=<html><center><b>Cannot connect to the gateway {0}.</b><br> 
 Please check your connection settings and application log for details.<br> \
 If problem persist, contact your network administrator.</center></html>
 logon.invalid.credentials=Invalid User Name / Password
+logon.invalid.certificate=Invalid client certificate
 login.require.client.cert=User is required to use client certificate login
 logon.lock.account=Maximum login attempts exceeded, please try again later.
 logon.updated.ssg.certificate=Gateway certificate has been updated.\nYou must restart the Console for the change to take effect.
