SSM-2703: HTTP caches can now be disabled by setting the size to 0. Added validation to existing cache size properties (min 0, max 1000000). Added ValidatedConfig class to perform validation of configuration with logging of invalid values. Cluster property descriptions are updated to note that 0 can be used to disable caching and the cluster property for schemas is updated as a reboot is not required for the property to be used.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26129 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -623,7 +623,7 @@ ioMailInTimeout.default = 60s
 ioMailInTimeout.clusterProperty = mail.inTimeout
 
 # Old name of this setting, but defaults live here -- new one points at this one for defaults
-xsltMaxCacheEntries.description = Maximum number of cached stylesheets loaded from URLs (Integer). Requires gateway restart.
+xsltMaxCacheEntries.description = Maximum number of cached stylesheets loaded from URLs, 0 for no caching (Integer). Requires gateway restart.
 xsltMaxCacheEntries.default = 100
 xsltMaxCacheEntries.systemProperty = ${propertyPrefix}.xsltcache.maxEntries
 xsltMaxCacheEntries.clusterProperty = xsltcache.maxEntries
@@ -639,7 +639,7 @@ schemaMaxCacheAge.default = 30000
 schemaMaxCacheAge.systemProperty = ${propertyPrefix}.schemacache.maxAge
 schemaMaxCacheAge.clusterProperty = schemacache.maxAge
 
-schemaMaxCacheEntries.description = Maximum number of cached XML schema documents loaded from URLs (Integer). Requires gateway restart.
+schemaMaxCacheEntries.description = Maximum number of cached XML schema documents loaded from URLs, 0 for no caching (Integer).
 schemaMaxCacheEntries.default = 100
 schemaMaxCacheEntries.systemProperty = ${propertyPrefix}.schemacache.maxEntries
 schemaMaxCacheEntries.clusterProperty = schemacache.maxEntries
