SSM-2737: fixed by no longer dismissing infomration messages automatically. Fixed Edit menu's Goto text to be 'Go to Assertion'. Fixed error message when user request to goto #1 to say '...giong to #2' instead.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26134 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/console.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/console.properties
@@ -32,7 +32,7 @@ Cut_MenuItem_text = Cut
 Copy_MenuItem_text = Copy
 CopyAll_MenuItem_text = Copy All
 Paste_MenuItem_text = Paste
-Goto_MenuItem_text = Goto
+Goto_MenuItem_text = Go to Assertion
 Find_MenuItem_text = Find
 F3_MenuItem_text = Find Next
 Shift_F3_MenuItem_text = Find Previous
