bug 8773: Routing assertions used within the audit sink or trace policies will now show the following validator warning at all times: "When routing from a metapolicy, take care not to cause a loop by routing to a service that will directly or indirectly trigger the same metapolicy."
Introduced a parameter object to hold the serializable service- and policy-level arguments to PolicyValidator.validate(), AssertionValidator.validate(), and the two validatePolicy() methods in ServiceAdmin.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26151 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/policy/src/main/resources/com/l7tech/policy/validator/PathValidator.properties
+++ b/modules/policy/src/main/resources/com/l7tech/policy/validator/PathValidator.properties
@@ -22,6 +22,7 @@ assertion.composite.nochildren = This composite assertion does not contain any c
 
 routing.emptyurl = The assertion might not work as configured. The protected service URL is empty.
 routing.malformedurl = The assertion might not work as configured. The protected service URL is malformed.
+routing.metapolicy.loop = When routing from a metapolicy, take care not to cause a loop by routing to a service that will directly or indirectly trigger the same metapolicy.
 
 auditing.excessivediskspace = Saving request or response XML may result in excessive disk space usage; do not enable for production services.
 
