SSG-3984: Secure conversatoin sessions are now stored using an LRUMap, there is a new cluster property to configure the maximum number of sessions. Kerberos sessions now use a separate manager.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26164 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1164,6 +1164,10 @@ wss.secureConversation.defaultSessionDuration.description=The default duration f
 wss.secureConversation.defaultSessionDuration.default=2h
 wss.secureConversation.defaultSessionDuration.clusterProperty=wss.secureConversation.defaultSessionDuration
 
+wss.secureConversation.maxSessions.description=The maximum number of WS-SecureConversation sessions.
+wss.secureConversation.maxSessions.default=10000
+wss.secureConversation.maxSessions.clusterProperty=wss.secureConversation.maxSessions
+
 wss.decorator.mustUnderstand.description=Whether Security headers should be generated with mustUnderstand asserted (true/false; default true)
 wss.decorator.mustUnderstand.default=true
 wss.decorator.mustUnderstand.systemProperty=com.l7tech.common.security.xml.decorator.secHdrMustUnderstand
