--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/web.xml
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/web.xml
@@ -91,6 +91,33 @@
         <filter-class>com.l7tech.server.admin.ManagerAppletFilter</filter-class>
     </filter>
 
+   <filter>
+        <filter-name>allCxfApiFilter</filter-name>
+        <filter-class>com.l7tech.gateway.common.transport.http.FeatureFilter</filter-class>
+        <init-param>
+            <param-name>endpoint-names</param-name>
+            <param-value>ADMIN_REMOTE, PC_NODE_API</param-value>
+        </init-param>
+    </filter>
+
+    <filter>
+        <filter-name>esmApiFilter</filter-name>
+        <filter-class>com.l7tech.gateway.common.transport.http.FeatureFilter</filter-class>
+        <init-param>
+            <param-name>endpoint-names</param-name>
+            <param-value>ADMIN_REMOTE</param-value>
+        </init-param>
+    </filter>
+
+    <filter>
+        <filter-name>pcNodeApiFilter</filter-name>
+        <filter-class>com.l7tech.gateway.common.transport.http.FeatureFilter</filter-class>
+        <init-param>
+            <param-name>endpoint-names</param-name>
+            <param-value>PC_NODE_API</param-value>
+        </init-param>
+    </filter>
+
     <filter-mapping>
         <filter-name>input-timeout</filter-name>
         <url-pattern>/*</url-pattern>
@@ -134,6 +161,31 @@
     <filter-mapping>
         <filter-name>managerAppletFilter</filter-name>
         <url-pattern>/ssg/webadmin/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>allCxfApiFilter</filter-name>
+        <url-pattern>/ssg/services/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>pcNodeApiFilter</filter-name>
+        <url-pattern>/ssg/services/processControllerNodeApi</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>esmApiFilter</filter-name>
+        <url-pattern>/ssg/services/gatewayApi</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>esmApiFilter</filter-name>
+        <url-pattern>/ssg/services/reportApi</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>esmApiFilter</filter-name>
+        <url-pattern>/ssg/services/migrationApi</url-pattern>
     </filter-mapping>
 
     <!--
@@ -398,9 +450,9 @@
     </servlet-mapping>
 
     <servlet-mapping>
-		<servlet-name>CXFServlet</servlet-name>
-		<url-pattern>/ssg/services/*</url-pattern>
-	</servlet-mapping>
+        <servlet-name>CXFServlet</servlet-name>
+        <url-pattern>/ssg/services/*</url-pattern>
+    </servlet-mapping>
 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
