SSG-3955: LDAP identity providers now have a configuration option to enable case insensitive group membership checks.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26206 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
@@ -146,4 +146,5 @@ advancedConfiguration.attrs.edit=&Edit
 advancedConfiguration.attrs.add.title=Add Attribute
 advancedConfiguration.attrs.edit.title=Edit Attribute
 advancedConfiguration.attrs.prompt=Attribute:
+advancedConfiguration.group.caseInsensitiveMembership=&Use case insensitive group membership check
 
