bug 3711: Enhanced schema validation assertion to be able to validate a full SOAP message, i.e. including the SOAP envelope. Clarified schema target UI to distinguish between SOAP / non-SOAP applicability. Tarari acceleration is used only for validating non-SOAP messages and SOAP message bodies.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26215 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SchemaValidationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SchemaValidationPropertiesDialog.properties
@@ -46,8 +46,10 @@ schemaLocation.label=&Schema location:
 modeBorderTitlePrefix.text=Schema:
 
 appliesTo.label = Schema applies to:
-appliesTo.body.label = &Entire Message Body
-appliesTo.args.label = &Message Arguments
+appliesTo.body.label = &SOAP Message Body
+appliesTo.args.label = SOAP Message &Arguments
+appliesTo.envelope.label = Entire SOAP &Message
+appliesTo.nonsoap.label = Non-SOAP: Entire Message
 
 specifyItem.label = Configured in advance
 readFromWsdlButton.name=Extract from WSDL
