SSG-3983: Token service now processes WS-Security timestamps by default, this can be disabled with the new cluster property "service.validateWssTimestamps".
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26217 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -814,6 +814,11 @@ samlAfterOffsetMinute.default = 5
 samlAfterOffsetMinute.clusterProperty = samlAssertion.NotAfterOffsetMinutes
 samlAfterOffsetMinute.systemProperty = ${propertyPrefix}.saml.notafteroffsetmin
 
+service.validateWssTimestamps.description = Should built-in services validate WS-Security timestamps (true/false)
+service.validateWssTimestamps.default = true
+service.validateWssTimestamps.clusterProperty = service.validateWssTimestamps
+service.validateWssTimestamps.systemProperty = com.l7tech.server.servicesValidateWssTimestamps
+
 samlValidateBeforeOffsetMinutes.description = The number of minutes to subtract from a SAML assertion's NotBefore restriction during validation.  This can be used to relax the validity window to allow for clock skew.  (default=0)
 samlValidateBeforeOffsetMinutes.default = 0
 samlValidateBeforeOffsetMinutes.clusterProperty = samlAssertion.validate.notBeforeOffsetMin
