fix bad path in pkcs11_linux.cfg now that we are using new drivers. Removed the invocation of scakiod_load which appears to completely kill the gateway when using the sca. For now, we are commenting this out rather than remove the code that invokes it (ScaManager.stopSca()) in case we discover a safe workaround. There does not, however, appear to be any problems with NOT stopping the kiod but further testing may show something...
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26245 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/pkcs11_linux.cfg
+++ b/etc/appliance/pkcs11_linux.cfg
@@ -1,5 +1,5 @@
 name=SCA6000
-library=/usr/local/lib/pkcs11/PKCS11_API.so64
+library=/usr/lib64/pkcs11/PKCS11_API.so
 description = SCA6000 token
 attributes(*, CKO_PRIVATE_KEY, CKK_RSA) = {
         CKA_TOKEN = true
