SSG-4018: BinarySecurityTokens that are not children of the security header are now validated.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26260 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/policy/assertion/ServerWsiBspAssertion.rules.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/policy/assertion/ServerWsiBspAssertion.rules.properties
@@ -27,7 +27,7 @@ E0003.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']//*[nam
 #
 # Branch Rules (determine which other XPaths can be skipped)
 #
-B0001.rule = Has security token reference : R3025 R3027 R3054 R3056 R3059 R3060 R3061 R3062 R3063 R3070 R3071
+B0001.rule = Has security token reference : R3025 R3027 R3029.1 R3030.1 R3031.1 R3032.1 R3033.1 R3054 R3056 R3059 R3060 R3061 R3062 R3063 R3070 R3071 R4215 R5207 R5409
 B0001.path = boolean(//wsse:SecurityTokenReference)
 B0002.rule = Has encrypted key or data : R3209 R5424 R5426 R5440 R5601 R5602 R5603 R5620 R5622 R5623 R5624 R5626
 B0002.path = boolean(//xenc:EncryptedData | //xenc:EncryptedKey)
@@ -55,14 +55,19 @@ B0002.path = boolean(//xenc:EncryptedData | //xenc:EncryptedKey)
 #R3024.path =
 R3029.rule = Any BINARY_SECURITY_TOKEN MUST specify an EncodingType attribute.
 R3029.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:Security/wsse:BinarySecurityToken[not(@EncodingType)])
+R3029.1.path = 0=count(//wsse:SecurityTokenReference/wsse:Embedded/wsse:BinarySecurityToken[not(@EncodingType)])
 R3030.rule = Any BINARY_SECURITY_TOKEN EncodingType attribute MUST have a value of "http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#Base64Binary".
 R3030.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:Security/wsse:BinarySecurityToken[@EncodingType and @EncodingType!='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#Base64Binary'])
+R3030.1.path = 0=count(//wsse:SecurityTokenReference/wsse:Embedded/wsse:BinarySecurityToken[@EncodingType and @EncodingType!='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#Base64Binary'])
 R3031.rule = Any BINARY_SECURITY_TOKEN MUST specify an ValueType attribute.
 R3031.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:Security/wsse:BinarySecurityToken[not(@ValueType)])
+R3031.1.path = 0=count(//wsse:SecurityTokenReference/wsse:Embedded/wsse:BinarySecurityToken[not(@ValueType)])
 R3032.rule = Any BINARY_SECURITY_TOKEN ValueType attribute MUST have a value specified by the related security token profile.
 R3032.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:Security/wsse:BinarySecurityToken[@ValueType and @ValueType!='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#X509v3' and @ValueType!='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#PKCS7' and @ValueType!='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#X509PKIPathv1' and @ValueType!='http://docs.oasis-open.org/wss/2005/xx/oasis-2005xx-wss-kerberos-token-profile-1.1#GSS_Kerberosv5_AP_REQ'])
+R3032.1.path = 0=count(//wsse:SecurityTokenReference/wsse:Embedded/wsse:BinarySecurityToken[@ValueType and @ValueType!='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#X509v3' and @ValueType!='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#PKCS7' and @ValueType!='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#X509PKIPathv1' and @ValueType!='http://docs.oasis-open.org/wss/2005/xx/oasis-2005xx-wss-kerberos-token-profile-1.1#GSS_Kerberosv5_AP_REQ'])
 R3033.rule = Any X509_TOKEN ValueType attribute MUST have a value of "http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#X509v3".
 R3033.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:Security/wsse:BinarySecurityToken[@ValueType and @ValueType!='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#X509v3' and substring(translate(normalize-space(text()),' ',''),1,3)='MII' and substring(translate(normalize-space(text()),' ',''),7,2)='CC' and substring(translate(normalize-space(text()),' ',''),12,7)='gAwIBAg'])
+R3033.1.path = 0=count(//wsse:SecurityTokenReference/wsse:Embedded/wsse:BinarySecurityToken[@ValueType and @ValueType!='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#X509v3' and substring(translate(normalize-space(text()),' ',''),1,3)='MII' and substring(translate(normalize-space(text()),' ',''),7,2)='CC' and substring(translate(normalize-space(text()),' ',''),12,7)='gAwIBAg'])
 R3025.rule = Any INTERNAL_SECURITY_TOKEN contained in an STR_EMBEDDED MUST be in the same format as if it were a child of a SECURITY_HEADER.
 R3025.path = 0=count(//wsse:SecurityTokenReference/wsse:Embedded[count(*)=0])
 R3027.rule = Any SECURITY_TOKEN_REFERENCE MUST NOT contain an STR_KEY_NAME.
@@ -154,7 +159,7 @@ R4201.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:S
 #R4214.rule = Any STR_REFERENCE to a USERNAME_TOKEN MUST have a ValueType attribute with a value of "http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#UsernameToken".
 #R4214.path =
 R4215.rule = Any SECURITY_TOKEN_REFERENCE to a USERNAME_TOKEN MUST NOT contain an STR_KEY_IDENTIFIER.
-R4215.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:Security/wsse:SecurityTokenReference/wsse:KeyIdentifier[@ValueType='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-username-token-profile-1.0#UsernameToken'])
+R4215.path = 0=count(//wsse:SecurityTokenReference/wsse:KeyIdentifier[@ValueType='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-username-token-profile-1.0#UsernameToken'])
 R4220.rule = Any NONCE MUST specify an EncodingType attribute.
 R4220.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:Security/wsse:UsernameToken/wsse:Nonce[not(@EncodingType)])
 R4221.rule = Any NONCE EncodingType attribute MUST have a value of "http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#Base64Binary".
@@ -176,7 +181,7 @@ R4225.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:S
 #R5206.rule = Any STR_KEY_IDENTIFIER that references an X509_TOKEN MUST have a ValueType attribute with the value of "http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#X509SubjectKeyIdentifier".
 #R5206.path =
 R5207.rule = Any STR_KEY_IDENTIFIER that references an X509_TOKEN MUST have an @EncodingType attribute with the value "http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#Base64Binary".
-R5207.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:Security/wsse:SecurityTokenReference/wsse:KeyIdentifier[@ValueType='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#X509SubjectKeyIdentifier' and (not(@EncodingType) or @EncodingType!='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#Base64Binary')])
+R5207.path = 0=count(//wsse:SecurityTokenReference/wsse:KeyIdentifier[@ValueType='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-x509-token-profile-1.0#X509SubjectKeyIdentifier' and (not(@EncodingType) or @EncodingType!='http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#Base64Binary')])
 #R5208.rule = Any STR_KEY_IDENTIFIER that references an X509_TOKEN MUST contain the value of the token's SubjectKeyIdentifier extension.
 #R5208.path =
 #R5209.rule = When a SECURITY_TOKEN_REFERENCE references an EXTERNAL_SECURITY_TOKEN that cannot be referred to using an STR_REFERENCE but can be referred to using an STR_KEY_IDENTIFIER or STR_ISSUER_SERIAL, an STR_KEY_IDENTIFIER or STR_ISSUER_SERIAL MUST be used.
@@ -200,7 +205,7 @@ R5404.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:S
 #R5408.rule = Any INCLUSIVE_NAMESPACES MUST contain the string "#default" if a default namespace is in-scope and desired to be protected, but not visibly utilized, for the element being signed and its descendants, per Exclusive XML Canonicalization Version 1.0.
 #R5408.path =
 R5409.rule = Any STR_ISSUER_SERIAL MUST contain a value following the encoding rules specified in the XML Signature specification for DNames.
-R5409.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:Security/wsse:SecurityTokenReference/ds:X509Data/ds:X509IssuerSerial[contains(text(), ',') or contains(text(), '+') or contains(text(), '"') or contains(text(), ';')])
+R5409.path = 0=count(//wsse:SecurityTokenReference/ds:X509Data/ds:X509IssuerSerial[contains(text(), ',') or contains(text(), '+') or contains(text(), '"') or contains(text(), ';')])
 R5411.rule = Any SIG_TRANSFORMS MUST contain at least one SIG_TRANSFORM child element.
 R5411.path = 0=count(/*[local-name()='Envelope']/*[local-name()='Header']/wsse:Security/ds:Signature/ds:SignedInfo/ds:Reference/ds:Transforms[not(ds:Transform[1])])
 R5412.rule = Any SIG_TRANSFORMS MUST contain as its last child a SIG_TRANSFORM with an Algorithm attribute with a value of "http://www.w3.org/2001/10/xml-exc-c14n#" or "http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-soap-message-security-1.0#STR-Transform" or "http://docs.oasis-open.org/wss/oasis-wss-SwAProfile-1.1#Attachment-Content-Signature-Transform" or "http://docs.oasis-open.org/wss/oasis-wss-SwAProfile-1.1#Attachment-Complete-Signature-Transform".
