Prevent FTP server from creating a file when the server is started (this doesn't happen on an appliance due to file permissions)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26283 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/transport/ftp/ftpserver-ssl.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/transport/ftp/ftpserver-ssl.properties
@@ -23,6 +23,10 @@ config.connection-manager.timeout-poll-inverval = 10
 # Ip restrictor
 config.ip-restrictor.class = com.l7tech.server.transport.ftp.FtpIpRestrictor
 
+# Prevents the default PropertiesUserManager construction which
+# would create the file "res/user.gen" (permissions allowing)
+config.user-manager.class = java.lang.Object
+
 # Secure listener
 config.listeners.secure.port = property-set-by-spring-override
 config.listeners.secure.server-address = property-set-by-spring-override
