--- a/modules/gateway/server/src/main/resources/com/l7tech/server/transport/ftp/ftpserver-normal.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/transport/ftp/ftpserver-normal.properties
@@ -23,6 +23,10 @@ config.connection-manager.timeout-poll-inverval = 10
 # Ip restrictor
 config.ip-restrictor.class = com.l7tech.server.transport.ftp.FtpIpRestrictor
 
+# Prevents the default PropertiesUserManager construction which
+# would create the file "res/user.gen" (permissions allowing)
+config.user-manager.class = java.lang.Object
+
 # Default listener
 config.listeners.default.port = property-set-by-spring-override
 config.listeners.default.server-address = property-set-by-spring-override
