SSG-4027: Add missing newline and fix numbering issues for explanations in gateway management help text.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26294 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/gateway-management-client/src/main/resources/com/l7tech/gateway/client/GatewayManagementClient.properties
+++ b/modules/gateway/gateway-management-client/src/main/resources/com/l7tech/gateway/client/GatewayManagementClient.properties
@@ -165,7 +165,7 @@ help.command.create=\
   \t   representation from 'PATH'. The resulting resource will be\n\
   \t   output to the specified 'PATH'.\n\
   \n\
-  \t1. Create a resource of type 'TYPE' using the resource \n\
+  \t2. Create a resource of type 'TYPE' using the resource \n\
   \t   representation 'RESOURCE'. The resulting resource will be\n\
   \t   output to the console.\n\
   \n\
@@ -197,7 +197,7 @@ help.command.export=\
   \t1. Export the policy for the resource of type 'TYPE' with the identifier\n\
   \t   'ID' and output to the console.\n\
   \n\
-  \t1. Export the policy for the resource of type 'TYPE' with the identifier\n\
+  \t2. Export the policy for the resource of type 'TYPE' with the identifier\n\
   \t   'ID' and output to the file at 'PATH'.\n\
   \n\
   {0}\
@@ -216,7 +216,7 @@ help.command.import=\
   \t   'ID' from the file 'PATH'. The import result will be output to the file\n\
   \t   'PATH'.\n\
   \n\
-  \t1. Import a policy for the resource of type 'TYPE' with the identifier \
+  \t2. Import a policy for the resource of type 'TYPE' with the identifier\n\
   \t   'ID' from the file 'PATH'. The import result will be output to the\n\
   \t   console. Any number of import instructions can be passed to control\n\
   \t   how policy dependencies are handled.\n\
@@ -271,7 +271,7 @@ help.command.validate=\
   \t1. Validate the policy for the resource of type 'TYPE' with the identifier\n\
   \t   'ID' and output to the console.\n\
   \n\
-  \t1. Validate the policy for the resource of type 'TYPE' from the file\n\
+  \t2. Validate the policy for the resource of type 'TYPE' from the file\n\
   \t   'PATH' and output to the file 'PATH'.\n\
   \n\
   {0}\
