--- a/modules/gateway/production/build.xml
+++ b/modules/gateway/production/build.xml
@@ -1,5 +1,6 @@
 <project name="layer7-gateway-processcontroller" default="compile">
     <property name="module.package.dependencies.skip" value="true"/>
+    <property name="module.idea.configurations" value="default,test,module,module-optional"/>
 
     <import file="../../../etc/build/build-common.xml"/>
 </project>
