--- a/build.xml
+++ b/build.xml
@@ -147,7 +147,7 @@
         <include name="**/xercesImpl.jar"/>
         <include name="**/commons-lang-2.3.jar"/>
         <include name="**/commons-codec-1.2.jar"/>
-        <include name="**/commons-collections-3.2.jar"/>
+        <include name="**/commons-collections-3.2.1.jar"/>
         <include name="**/commons-logging-1.0.4.jar"/>
         <include name="**/commons-discovery.jar"/>
         <include name="**/qname.jar"/>
@@ -1495,13 +1495,16 @@
         <pack-mac jarfile="${build.dir}/managerapplet/lib/saaj-api-1.3.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/saaj-impl-1.3.3.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/servlet-api-2.5.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-aop-2.5.6.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-beans-2.5.6.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-context-2.5.6.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-core-2.5.6.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-orm-2.5.6.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-tx-2.5.6.jar"/>
-        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-web-2.5.6.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-aop-3.0.2.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-asm-3.0.2.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-beans-3.0.2.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-context-3.0.2.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-core-3.0.2.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-expression-3.0.2.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-jdbc-3.0.2.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-orm-3.0.2.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-tx-3.0.2.RELEASE.jar"/>
+        <pack-mac jarfile="${build.dir}/managerapplet/lib/spring-web-3.0.2.RELEASE.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/validation-api-1.0.0.GA.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/whirlycache-1.0.1.jar"/>
         <pack-mac jarfile="${build.dir}/managerapplet/lib/wsdl4j-1.6.2-l7p1.jar"/>
