--- a/modules/ems/ivy.xml
+++ b/modules/ems/ivy.xml
@@ -48,7 +48,7 @@
         <dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.8" force="true" conf="core"/>
         <dependency org="org.mortbay.jetty" name="jetty-ajp" rev="6.1.8" force="true" conf="core"/>
         <dependency org="org.mortbay.jetty" name="jetty-sslengine" rev="6.1.8" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-test" rev="2.5.6" force="true" conf="test"/>
+        <dependency org="org.springframework" name="spring-test" rev="3.0.2.RELEASE" force="true" conf="test"/>
         <dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
         <dependency org="mysql" name="mysql-connector-java" rev="5.0.8" force="true" conf="core"/>
         <dependency org="org.apache.cxf" name="cxf-rt-frontend-jaxws" rev="2.1.6" force="true" conf="core"/>
