--- a/modules/gateway/common/ivy.xml
+++ b/modules/gateway/common/ivy.xml
@@ -33,11 +33,11 @@
         <!-- Hibernate annotations used on beans -->
         <dependency org="org.hibernate" name="hibernate-annotations" rev="3.4.0.GA" force="true" conf="compile->master"/>
         <dependency org="org.hibernate" name="hibernate-commons-annotations" rev="3.1.0.GA" force="true" conf="compile->master"/>
-        <dependency org="org.springframework" name="spring-aop" rev="2.5.6" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-tx" rev="2.5.6" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-orm" rev="2.5.6" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-aop" rev="3.0.2.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-tx" rev="3.0.2.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-orm" rev="3.0.2.RELEASE" force="true" conf="core"/>
         <!-- Required on server -->
-        <dependency org="org.springframework" name="spring-web" rev="2.5.6" force="true" conf="optional"/>
+        <dependency org="org.springframework" name="spring-web" rev="3.0.2.RELEASE" force="true" conf="optional"/>
 
         <dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
         <dependency org="com.jscape" name="sftp" rev="7.0.2" force="true" conf="core"/>
