--- a/modules/gateway/console/ivy.xml
+++ b/modules/gateway/console/ivy.xml
@@ -48,7 +48,7 @@
         <dependency org="com.jgoodies" name="looks" rev="1.1.3" force="true" conf="core"/>
         <dependency org="com.japisoft" name="xmlpad" rev="3.7" force="true" conf="core"/>
         <dependency org="com.japisoft" name="xmlpad-res" rev="3.7" force="true" conf="runtime"/>
-        <dependency org="org.springframework" name="spring-web" rev="2.5.6" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-web" rev="3.0.2.RELEASE" force="true" conf="core"/>
         <!-- For the SSM thick client, we'll always use the FIPS version of RSA for the time being -->
         <dependency org="com.rsa" name="jsafe-jce-fips" rev="4.1" force="true" conf="core"/>
         <dependency org="com.rsa" name="certj" rev="3.1" force="true" conf="core"/>
