--- a/modules/gateway/management/ivy.xml
+++ b/modules/gateway/management/ivy.xml
@@ -31,10 +31,10 @@
         <!-- Hibernate annotations used on beans -->
         <dependency org="org.hibernate" name="hibernate-annotations" rev="3.4.0.GA" force="true" conf="compile->master"/>
         <dependency org="org.hibernate" name="hibernate-commons-annotations" rev="3.1.0.GA" force="true" conf="compile->master"/>
-        <dependency org="org.springframework" name="spring-jdbc" rev="2.5.6" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-orm" rev="2.5.6" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-context-support" rev="2.5.6" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-tx" rev="2.5.6" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-jdbc" rev="3.0.2.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-orm" rev="3.0.2.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-context-support" rev="3.0.2.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-tx" rev="3.0.2.RELEASE" force="true" conf="core"/>
         <dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
     </dependencies>
 </ivy-module>
