--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -56,7 +56,7 @@
             <exclude org="xerces" module="xerces" name="*" type="*" ext="*" conf=""
                      matcher="exact"/>
         </dependency>
-        <dependency org="cglib" name="cglib-nodep" rev="2.1_3" force="true" conf="core"/>
+        <dependency org="cglib" name="cglib-nodep" rev="2.2" force="true" conf="core"/>
         <dependency org="c3p0" name="c3p0" rev="0.9.1.2" force="true" conf="core"/>
         <dependency org="org.hibernate" name="hibernate-core" rev="3.3.2.GA" force="true" conf="core"/>
         <dependency org="org.hibernate" name="hibernate-annotations" rev="3.4.0.GA" force="true" conf="core"/>
@@ -71,12 +71,12 @@
         <dependency org="mysql" name="mysql-connector-java" rev="5.0.8" force="true" conf="core"/>
         <dependency org="org.slf4j" name="slf4j-api" rev="1.5.8" force="true" conf="core"/>
         <dependency org="org.slf4j" name="slf4j-jdk14" rev="1.5.8" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-jdbc" rev="2.5.6" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-orm" rev="2.5.6" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-context-support" rev="2.5.6" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-tx" rev="2.5.6" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-web" rev="2.5.6" force="true" conf="core"/>
-        <dependency org="org.springframework" name="spring-webmvc" rev="2.5.6" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-jdbc" rev="3.0.2.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-orm" rev="3.0.2.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-context-support" rev="3.0.2.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-tx" rev="3.0.2.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-web" rev="3.0.2.RELEASE" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-webmvc" rev="3.0.2.RELEASE" force="true" conf="core"/>
         <dependency org="org.springframework" name="aspectjweaver" rev="2.5.4" force="true" conf="core"/> <!-- Used for parsing pointcut expressions only -->
         <dependency org="org.apache.ftpserver" name="ftpserver-parent" rev="1.0-543677-20070601" force="true"
                     conf="core"/>
@@ -104,7 +104,7 @@
         <dependency org="org.apache.cxf" name="cxf-rt-transports-local" rev="2.1.6" force="true" conf="test"/>
         <!-- apacheds-server-integ is used for LdapIdentityProviderTest but not currently in our repository -->
         <!--<dependency org="org.apache.directory.server" name="apacheds-server-integ" rev="1.5.5" force="true" conf="test"/>-->
-        <dependency org="org.springframework" name="spring-test" rev="2.5.6" force="true" conf="test"/>
+        <dependency org="org.springframework" name="spring-test" rev="3.0.2.RELEASE" force="true" conf="test"/>
        
         <!-- Exclusions --> 
         <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
