--- a/modules/skunkworks/ivy.xml
+++ b/modules/skunkworks/ivy.xml
@@ -44,7 +44,7 @@
         <dependency org="com.infonyte" name="infonyte-db" rev="3.5.9" force="true" conf="core"/>
         <dependency org="com.tarari" name="tarari-raxj" rev="4.4.3.31" force="true"
                     conf="optional->compile(*),master(*)"/>
-        <dependency org="org.springframework" name="spring-test" rev="2.5.6" force="true" conf="core"/>
+        <dependency org="org.springframework" name="spring-test" rev="3.0.2.RELEASE" force="true" conf="core"/>
         <dependency org="junit" name="junit" rev="4.7" force="true" conf="core"/>
         <dependency org="jasperreports" name="jasperreports" rev="3.1.2-p1" force="true" conf="core"/>
         <dependency org="mysql" name="mysql-connector-java" rev="5.0.8" force="true" conf="core"/>
