SSG-4008: Added option to disable SSM certificate discovery.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26327 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1062,6 +1062,10 @@ services.certificateDiscoveryEnabled.description=Enabling certificate discovery 
 services.certificateDiscoveryEnabled.default=true
 services.certificateDiscoveryEnabled.clusterProperty=services.certificateDiscoveryEnabled
 
+admin.certificateDiscoveryEnabled.description=Enabling certificate discovery allows the SecureSpan Manager to securely discover this Gateway's SSL certificate without user intervention (true/false).
+admin.certificateDiscoveryEnabled.default=true
+admin.certificateDiscoveryEnabled.clusterProperty=admin.certificateDiscoveryEnabled
+
 processControllerPresent.description = Nodes in this cluster are managed processes (true/false).
 processControllerPresent.visible = false
 processControllerPresent.clusterProperty = node.processControllerPresent
