Initial implementation of JSON Schema validation. Assertion is message targetable and the scheam can be configured in advance, monitor a URL configured in advance or obtained from a content-type or link header. Added new layer7-json module providing an interface for JSON data and JSON schema outside of implementation we are using. Added new JsobFacet and JsonKnob to messages when type of Message is application/json. Some small refactorings: added generics to ResourceGetter and UrlFinder to remove the dependency on ElementCursor. Reused Xsl panels for white list and monitor URL; Updated panels to be reusable. Some intial test coverage of server assertion.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26329 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
@@ -35,6 +35,7 @@ org.springframework.beans.factory.config.PropertyPlaceholderConfigurer.level = S
 com.l7tech.server.util.PasswordDecryptingPropertiesFactoryBean.level = SEVERE
 org.apache.cxf.phase.PhaseInterceptorChain.level = SEVERE
 org.hibernate.validator.util.Version.level = SEVERE
+eu.vahlas.json.schema.level = SEVERE
 
 # Turn off traffic logging for regular log files
 com.l7tech.traffic.useParentHandlers = false
