--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -596,6 +596,7 @@ ioStaleCheckHosts.default = 10
 ioStaleCheckHosts.systemProperty = com.l7tech.common.http.prov.apache.CommonsHttpClient.staleCheckHosts
 ioStaleCheckHosts.clusterProperty = io.staleCheckHosts
 
+#todo this is applied to all MimeBody regardless of the content-type, either rename to be generic or open a bug for MimeBody usage
 ioXmlPartMaxBytes.description = Maximum number of bytes permitted in the XML part of a message, or 0 for unlimited (Integer)
 ioXmlPartMaxBytes.default = 2621440
 ioXmlPartMaxBytes.systemProperty = ${propertyPrefix}.xmlPartMaxBytes
