--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/XslTransformationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/XslTransformationPropertiesDialog.properties
@@ -27,7 +27,7 @@ fetchRemoveRegexButton.text = &Remove
 fetchRemoveRegexButton.tooltip = Remove the selected Regular Expression from the list
 regexDialog.title = Enter a Regular Expression that Stylesheet URLs Must Match
 regexDialog.prompt = Expression:
-fetchAllowNoDeclarationCheckbox.text=Allow messages with &no stylesheet declaration
+noUrlFoundCheckbox.text=Allow messages with &no stylesheet declaration
 
 #######
 # components
