Minor build change for less scanning.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26342 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -1063,7 +1063,9 @@
         <mkdir dir="${build.reports}"/>
         <junitreport todir="${build.reports}">
             <fileset dir="${src.root}/modules">
-                <include name="**/build/reports/tests/TEST-*.xml"/>
+                <include name="*/build/reports/tests/TEST-*.xml"/>
+                <include name="*/*/build/reports/tests/TEST-*.xml"/>
+                <include name="*/*/*/build/reports/tests/TEST-*.xml"/>
             </fileset>
             <report format="frames" todir="${build.reports}/html"/>
         </junitreport>
